Ensure loading indicator doesn't show outside it's context - Windows Manager sits below side nav and main screen content   - shell, log streaming - The relative and content loading indicator covers a specific area or the main screen content - Bug - relative and content loading indicator appears over windows manager - Fix   - apply different z-index to main and other modes of loading indicator   - assign a higher z-index to windows manager (higher than main screen content) - Tested   - mode - relative     - shell/chart/monitoring/index.vue     - shell/components/Wizard.vue     - shell/components/nav/GlobalLoading.vue     - shell/pages/auth/login.vue   - mode - content     - shell/pages/c/_cluster/monitoring/index.vue     - shell/edit/namespace.vue     - shell/pages/c/_cluster/settings/banners.vue   - mode - main    - not actually used... and currently broken (new burger menu is under it)   - outside correctly shows above relative and content      - burger menu, namespace filter, user avatar   - wm drag and drop (working in vue3!)

--- a/shell/assets/styles/global/_layout.scss
+++ b/shell/assets/styles/global/_layout.scss
@@ -115,7 +115,7 @@ HEADER {
 .wm {
   grid-area: wm;
   overflow-y: hidden;
-  z-index: 1;
+  z-index: z-index('windowsManager');
 }
 
 .localeSelector {
